--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,60 +1,56 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf8">
-		<style type="text/css">
+<!DOCTYPE html><html><head><meta charset="utf8"><style type="text/css">#menu {
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    left: 0px;
+    right: 0px;
+    top: 105px;
+    position: absolute;
+}
 
-			#menu{
-				width: 100%;
-				height: 50px;
-				text-align: center;
-				left: 0px;
-				right: 0px;
-				top: 105px;
-				position: absolute;
-			}
-			#menu ul{
-				text-align: center;
-			}
-			#menu ul li{
-				display: inline;
-				margin-left: 50px;
-				list-style: none;
-			}
+#menu ul {
+    text-align: center;
+}
 
-			a {
-				text-decoration: none;
-			}
+#menu ul li {
+    display: inline;
+    margin-left: 50px;
+    list-style: none;
+}
 
-			#one img{
-				width: 352px;
-				height: 205px;
-				border-radius: 5%;
-				margin-top: 5px;
-			}
-			#table1{
-				border: 1px solid black;
-				width: 100%;
-				border-collapse: collapse;
-				padding-top: 12px;
-  				padding-bottom: 12px;
-  				text-align: left;
-  				background-color: #04AA6D;
-  				color: black;
-			}
-			
-			#form1{
-				margin-top: 10px;
-				width: auto;%;
-				margin-left: 15%;
-				margin-right: 15%;
-				margin-bottom: 5%;
-			}
-			#cvbody{
-				background-color: #9fdfbf;
-			}
+a {
+    text-decoration: none;
+}
 
-	
-		</style>
-	</head>
-</html>
+#one img {
+    width: 352px;
+    height: 205px;
+    border-radius: 5%;
+    margin-top: 5px;
+}
+
+#table1 {
+    border: 1px solid black;
+    width: 100%;
+    border-collapse: collapse;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: black;
+}
+
+#form1 {
+    margin-top: 10px;
+    width: auto;
+    %;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-bottom: 5%;
+}
+
+#cvbody {
+    background-color: #9fdfbf;
+}
+
+</style></head></html>
