--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,26 +1,8 @@
-<!DOCTYPE html><html><head><meta charset="utf8"><style type="text/css">#menu {
-    width: 100%;
-    height: 50px;
-    text-align: center;
-    left: 0px;
-    right: 0px;
-    top: 105px;
-    position: absolute;
-}
+html><html><head><meta charset="utf8"><style type="text/css">
 
-#menu ul {
-    text-align: center;
-}
 
-#menu ul li {
-    display: inline;
-    margin-left: 50px;
-    list-style: none;
-}
 
-a {
-    text-decoration: none;
-}
+
 
 #one img {
     width: 352px;
@@ -29,21 +11,11 @@ a {
     margin-top: 5px;
 }
 
-#table1 {
-    border: 1px solid black;
-    width: 100%;
-    border-collapse: collapse;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #04AA6D;
-    color: black;
-}
+
 
 #form1 {
-    margin-top: 10px;
+    margin-top: 5%;
     width: auto;
-    %;
     margin-left: 15%;
     margin-right: 15%;
     margin-bottom: 5%;
