--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,17 +1,9 @@
-html><html><head><meta charset="utf8"><style type="text/css">
-
-
-
-
-
-#one img {
+html><html><head><meta charset="utf8"><style type="text/css">#one img {
     width: 352px;
     height: 205px;
     border-radius: 5%;
     margin-top: 5px;
 }
-
-
 
 #form1 {
     margin-top: 5%;
